--- a/TringConnect/StoryView/TCNewStoryCollectionViewCell.xib
+++ b/TringConnect/StoryView/TCNewStoryCollectionViewCell.xib
@@ -10,10 +10,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TCNewStoryCollectionViewCell" id="EBB-z5-AK0" customClass="TCNewStoryCollectionViewCell" customModule="TringConnect" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="60" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="CT8-AQ-fP5">
-                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="60" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v9T-Dt-q1j" customClass="TCButton" customModule="TringConnect" customModuleProvider="target">
@@ -25,7 +25,7 @@
                 <constraints>
                     <constraint firstItem="v9T-Dt-q1j" firstAttribute="leading" secondItem="CT8-AQ-fP5" secondAttribute="leading" id="I31-TB-g6Z"/>
                     <constraint firstItem="v9T-Dt-q1j" firstAttribute="top" secondItem="CT8-AQ-fP5" secondAttribute="top" id="kyT-Qq-OXn"/>
-                    <constraint firstAttribute="bottom" secondItem="v9T-Dt-q1j" secondAttribute="bottom" id="r7p-np-f4i"/>
+                    <constraint firstAttribute="bottom" secondItem="v9T-Dt-q1j" secondAttribute="bottom" constant="15" id="r7p-np-f4i"/>
                     <constraint firstAttribute="trailing" secondItem="v9T-Dt-q1j" secondAttribute="trailing" id="zrD-lt-LiC"/>
                 </constraints>
             </collectionViewCellContentView>
