--- a/TringConnect/StoryView/TCStoryCollectionViewCell.xib
+++ b/TringConnect/StoryView/TCStoryCollectionViewCell.xib
@@ -17,35 +17,35 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TCStoryCollectionViewCell" id="k4N-tt-7uC" customClass="TCStoryCollectionViewCell" customModule="TringConnect" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="60" height="75"/>
+            <rect key="frame" x="0.0" y="0.0" width="60" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="J4K-8K-AM9">
-                <rect key="frame" x="0.0" y="0.0" width="60" height="75"/>
+                <rect key="frame" x="0.0" y="0.0" width="60" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MZ5-Sz-fUV">
                         <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j2E-o1-qYD">
-                                <rect key="frame" x="5" y="5" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="AqL-4x-8MY"/>
-                                    <constraint firstAttribute="height" constant="50" id="DA1-KI-ENz"/>
+                                    <constraint firstAttribute="width" constant="60" id="AqL-4x-8MY"/>
+                                    <constraint firstAttribute="height" constant="60" id="DA1-KI-ENz"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="j2E-o1-qYD" secondAttribute="trailing" constant="5" id="HX5-vf-Tyv"/>
+                            <constraint firstAttribute="trailing" secondItem="j2E-o1-qYD" secondAttribute="trailing" id="HX5-vf-Tyv"/>
                             <constraint firstAttribute="width" constant="60" id="Oa0-GC-ND0"/>
-                            <constraint firstItem="j2E-o1-qYD" firstAttribute="leading" secondItem="MZ5-Sz-fUV" secondAttribute="leading" constant="5" id="RvA-Fw-zoZ"/>
+                            <constraint firstItem="j2E-o1-qYD" firstAttribute="leading" secondItem="MZ5-Sz-fUV" secondAttribute="leading" id="RvA-Fw-zoZ"/>
                             <constraint firstAttribute="height" constant="60" id="Z0X-JM-daW"/>
-                            <constraint firstAttribute="bottom" secondItem="j2E-o1-qYD" secondAttribute="bottom" constant="5" id="bhx-tb-Qhk"/>
-                            <constraint firstItem="j2E-o1-qYD" firstAttribute="top" secondItem="MZ5-Sz-fUV" secondAttribute="top" constant="5" id="u08-em-REG"/>
+                            <constraint firstAttribute="bottom" secondItem="j2E-o1-qYD" secondAttribute="bottom" id="bhx-tb-Qhk"/>
+                            <constraint firstItem="j2E-o1-qYD" firstAttribute="top" secondItem="MZ5-Sz-fUV" secondAttribute="top" id="u08-em-REG"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="bottomLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EZl-Cg-G8l" customClass="TCLabel" customModule="TringConnect" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="60" width="60" height="14"/>
+                        <rect key="frame" x="0.0" y="63" width="60" height="14"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="B3n-Na-Y57"/>
@@ -62,13 +62,12 @@
                     <constraint firstItem="MZ5-Sz-fUV" firstAttribute="top" secondItem="J4K-8K-AM9" secondAttribute="top" id="ZPh-3A-Vhr"/>
                     <constraint firstAttribute="trailing" secondItem="EZl-Cg-G8l" secondAttribute="trailing" id="d7X-bx-tof"/>
                     <constraint firstAttribute="bottom" secondItem="EZl-Cg-G8l" secondAttribute="bottom" constant="1" id="fyt-am-f8N"/>
-                    <constraint firstItem="EZl-Cg-G8l" firstAttribute="top" secondItem="MZ5-Sz-fUV" secondAttribute="bottom" id="sRI-fj-2Ka"/>
+                    <constraint firstItem="EZl-Cg-G8l" firstAttribute="top" secondItem="MZ5-Sz-fUV" secondAttribute="bottom" constant="3" id="sRI-fj-2Ka"/>
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="313" height="284"/>
             <connections>
                 <outlet property="imageView" destination="j2E-o1-qYD" id="yUf-f0-dWM"/>
-                <outlet property="outerView" destination="MZ5-Sz-fUV" id="w5F-Fx-5JK"/>
                 <outlet property="storyNameLabel" destination="EZl-Cg-G8l" id="Dca-z9-hnd"/>
             </connections>
             <point key="canvasLocation" x="103" y="35"/>
